<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9l2-AY-kzQ">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LabTunes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="057-DC-zQK">
                                <rect key="frame" x="164" y="460" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XTT-fv-PF4"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uMv-3r-uVW">
                                <rect key="frame" x="139" y="184" width="97" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="userField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="97" id="MTD-5i-Ndp"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fUd-Fo-XKd">
                                <rect key="frame" x="139" y="274" width="97" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="97" id="Lxd-Uv-Vqj"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="057-DC-zQK" secondAttribute="bottom" constant="177" id="Crj-fv-fUP"/>
                            <constraint firstItem="uMv-3r-uVW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="D67-tn-kru"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fUd-Fo-XKd" secondAttribute="trailing" constant="139" id="EI0-7Y-6Sr"/>
                            <constraint firstItem="fUd-Fo-XKd" firstAttribute="top" secondItem="uMv-3r-uVW" secondAttribute="bottom" constant="60" id="aj1-he-Or6"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uMv-3r-uVW" secondAttribute="trailing" constant="139" id="eNt-dH-1gR"/>
                            <constraint firstItem="057-DC-zQK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="164" id="iNd-iP-Ryr"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="057-DC-zQK" secondAttribute="trailing" id="xtG-j7-Nfh"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="EIK-YQ-3x0"/>
                    <connections>
                        <outlet property="passwordField" destination="fUd-Fo-XKd" id="j9q-kx-zrm"/>
                        <outlet property="userField" destination="uMv-3r-uVW" id="N1G-b5-Wz0"/>
                        <segue destination="faH-x6-EQ0" kind="show" identifier="login" id="A57-lx-qPq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1248.8" y="106.59670164917542"/>
        </scene>
        <!--Music View Controller-->
        <scene sceneID="EWK-N0-hof">
            <objects>
                <viewController id="faH-x6-EQ0" customClass="MusicViewController" customModule="LabTunes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4Nb-U7-Gag">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zrm-7V-Qmh">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="musicCell" id="7ie-ex-WWf">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7ie-ex-WWf" id="fuc-ai-OFQ">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="faH-x6-EQ0" id="QYQ-I5-yaa"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="MusicView"/>
                        <viewLayoutGuide key="safeArea" id="4rQ-Ik-TOc"/>
                    </view>
                    <connections>
                        <outlet property="tableView" destination="zrm-7V-Qmh" id="Zk1-fK-1ha"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="2Lh-xP-52e" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2069.5999999999999" y="106.59670164917542"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="kPO-SX-oyk">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9l2-AY-kzQ" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9wh-Fw-4uW">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Y5H-ix-96k"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="tMH-5F-rkI" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="309.60000000000002" y="106.59670164917542"/>
        </scene>
    </scenes>
</document>
