//
//  LabTunesUITests.swift
//  LabTunesUITests
//
//  Created by Alexis Celestino Solís on 11/9/18.
//  Copyright © 2018 Alexis Celestino Solís. All rights reserved.
//

import XCTest

class LabTunesUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    //MARK: pruebas de interface
    func testAppLogin(){
        let app = XCUIApplication()
        let nameTextField = app.textFields["userField"]
        nameTextField.tap()
        nameTextField.typeText("iOSLab")
        
        let passwordTextField = app.secureTextFields["passwordField"]
        passwordTextField.tap()
        passwordTextField.typeText("verysecurepassword")
        
        let logginButton = app.buttons["loginButton"]
        logginButton.tap()
        XCTAssertTrue(app.isDisplayMusic)
    }
    
}

extension XCUIApplication{
    var isDisplayMusic: Bool{
        return otherElements["MusicView"].exists
    }
}
